<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.gretya.mycontacts.MainActivity"
    android:background="@color/colorFondo">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <!--- Nombre Completo -->
       <android.support.design.widget.TextInputLayout
           android:id="@+id/input_layout_name"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <EditText
               android:id="@+id/input_name"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:singleLine="true"
               android:hint="@string/hint_name" />

       </android.support.design.widget.TextInputLayout>


        <!--- Teléfono -->
        <android.support.design.widget.TextInputLayout
           android:id="@+id/input_layout_phone"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <EditText
               android:id="@+id/input_phone"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="phone"
               android:hint="@string/hint_phone"
               />


       </android.support.design.widget.TextInputLayout>


        <!--- Email -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email"/>

        </android.support.design.widget.TextInputLayout>

        <!--- Data Picker -->

        <!--- Fecha Nacimiento -->
        <TextView
            android:id="@+id/TextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="@dimen/size_letra"
            android:text="@string/date_label_set"/>

        <TextView
            android:id="@+id/TextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/date_selected"
            />


        <Button
            android:id="@+id/dateButon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:onClick="setDate"
            android:text="@string/date_button_set"
            />


        <!--- Descripción Contacto -->
        <TextView
            android:id="@+id/contacto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_contact_information"
            android:layout_margin="20dp"
            android:layout_marginRight="20dp"
            android:textSize="@dimen/size_letra"
            />

        <EditText
            android:id="@+id/input_contact_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mi_boton"
        android:theme="@style/MiBotonRaised"
        android:layout_marginTop="@dimen/boton"
       />



    </LinearLayout>



</LinearLayout>